# chaynaya-vysota

./: .dockerignore  .env.template  .gitignore  Dockerfile  docker-compose.yml  entrypoint.sh  manage.py  pyproject.toml
catalog/: admin.py  models.py  serializers.py  urls.py  views.py
catalog/migrations/: 0001_initial.py  0002_initial.py  0003_product_interesting_fact_and_more.py  0004_alter_tastecriteria_grade.py  0005_tastecriteria_description.py  0006_alter_tastecriteria_options_tastecriteria_order.py  0007_product_result_phrase.py  0008_icecreamlogo_intro_name_product_color_and_more.py  0009_alter_product_image.py  0010_icecreamlogo_type.py  0011_config.py  0012_circlechart_rename_icecreamtastetags_tastetags_and_more.py  0013_tasting_type.py  0014_alter_tastecriteria_orientation_and_more.py  0015_circlechart_order_alter_product_composition.py  0016_alter_circlechart_options.py  0017_circlechart_color.py  0018_remove_product_tea_price_per_gram_and_more.py  0019_circlechart_label_placement.py  0020_product_tea_rubrucator.py  0021_rename_circlechart_chart.py  0022_chart_chart_type.py  0023_chart_x_axis_chart_x_axis_name_chart_y_axis_and_more.py  0024_tasteblock_chart_taste_block_and_more.py  0025_productreview_product_tasting_and_more.py  0026_move_evaluation_to_product_tasting.py  0027_remove_producttastecriteria_criteria_and_more.py  0028_phrasetemplate_phrasetemplatereview_and_more.py  0030_backfill_product_tasting_charts.py  (+8 more)
chaynaya_vysota/: asgi.py  settings.py  urls.py  wsgi.py
guests/: serializers.py  urls.py  views.py
users/: admin.py  models.py
(+1 files in other folders)
