[tool.poetry]
name = "chaynaya-vysota"
version = "0.1.0"
description = "Backend for Chaynaya Vysota — tea house with ice cream tastings"
authors = ["benomen <arvolodko@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
django = "5.0.4"
djangorestframework = "3.15.1"
django-cors-headers = "4.3.1"
djangorestframework-simplejwt = "5.3.1"
django-environ = "0.12.0"
dj-database-url = "2.2.0"
psycopg2-binary = "^2.9.10"
gunicorn = "^23.0.0"
drf-spectacular = "^0.28.0"
uvicorn = {extras = ["standard"], version = "^0.38.0"}
pillow = "^11.0.0"

[tool.poetry.group.dev.dependencies]
black = "^25.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ["py312"]